--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "org.jetbrains.kotlin.jvm" version "1.3.11"
+    id "org.jetbrains.kotlin.jvm" version "1.3.20"
     id "com.jfrog.bintray" version "1.8.4"
     id "maven-publish"
     id "org.jetbrains.dokka" version "0.9.17"
@@ -15,7 +15,6 @@ description "Kotlin DSL builder for XML that supports a variety of \"accents\"."
 version "0.1.0"
 
 ext {
-    kotlinVersion = "1.3.11"
     javaTarget = "1.8"
     gitUrl = "https://gitlab.com/Olivki/kanon-xml"
     artifactName = "kanon.xml"
@@ -30,7 +29,7 @@ dependencies {
     implementation "moe.kanon.kextensions:kanon.kextensions:0.5.1"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
+    implementation "org.jetbrains.kotlin:kotlin-reflect"
     testImplementation "io.kotlintest:kotlintest-runner-junit5:3.1.11"
 }
 
